Add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
 </head>
 
 <body>
-  <h1>Pig Game</h1>
+  <main>
+    <div class="container">
+      <div class="controls-container flex column">
+        <button class="btn" id="btnNewGame">🔄 New Game</button>
+        <img src="images/dice-1.png" alt="dice-1" class="image">
+        <button class="btn">🎲 Roll Dice</button>
+        <button class="btn">📥 Hold</button>
+      </div>
+      <div class="grid grid--2-cols">
+        <section>
+          <h2>Player</h2>
+          <span class="total-points" id="totalPoints">50</span>
+          <div>
+            <h3>Current</h3>
+            <span class="points" id="points">0</span>
+          </div>
+        </section>
+        <section>
+          <h2>Player</h2>
+          <span class="total-points" id="totalPoints">50</span>
+          <div>
+            <h3>Current</h3>
+            <span class="points" id="points">0</span>
+          </div>
+        </section>
+      </div>
+    </div>
+  </main>
   <script src="script.js"></script>
 </body>
 
