Get random dice number and display corresponding image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="controls-container flex column">
             <button class="btn" id="btnNewGame">🔄 New Game</button>
             <div class="image-container">
-              <img src="images/dice-1.png" alt="dice-1" class="image">
+              <img src="images/dice-1.png" alt="dice-1" class="image" id="diceImage">
             </div>
             <div>
               <button class="btn">🎲 Roll Dice</button>
