Feature: Roll dice

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <img src="images/dice-1.png" alt="dice-1" class="image" id="diceImage">
             </div>
             <div>
-              <button class="btn">🎲 Roll Dice</button>
+              <button class="btn" id="rollDice">🎲 Roll Dice</button>
               <button class="btn">📥 Hold</button>
             </div>
           </div>
