Set starting conditions

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
           <section class="player player--active flex column">
             <h2>Player 1</h2>
-            <span class="total-points margin-bottom-bigger" id="totalPoints">50</span>
+            <span class="total-points margin-bottom-bigger" id="totalPoints--1"></span>
             <div class="center-text">
               <h3 class="margin-bottom-smaller">Current</h3>
-              <span class="points" id="points">0</span>
+              <span class="points" id="currentPoints--1"></span>
             </div>
           </section>
 
           <div class="controls-container flex column">
             <button class="btn" id="btnNewGame">🔄 New Game</button>
             <div class="image-container">
-              <img src="images/dice-1.png" alt="dice-1" class="image" id="diceImage">
+              <img src="images/dice-1.png" alt="dice-image" class="image hidden" id="diceImage">
             </div>
             <div>
               <button class="btn" id="rollDice">🎲 Roll Dice</button>
@@ -37,10 +37,10 @@
 
           <section class="player flex column">
             <h2>Player 2</h2>
-            <span class="total-points margin-bottom-bigger" id="totalPoints">50</span>
+            <span class="total-points margin-bottom-bigger" id="totalPoints--2"></span>
             <div class="center-text">
               <h3 class="margin-bottom-smaller">Current</h3>
-              <span class="points" id="points">0</span>
+              <span class="points" id="currentPoints--2"></span>
             </div>
           </section>
 
