Refactor: Change word 'points' to 'score'

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
           <section class="player player--active flex column">
             <h2>Player 1</h2>
-            <span class="total-points margin-bottom-bigger" id="totalPoints--1"></span>
+            <span class="total-score margin-bottom-bigger" id="totalScore--1"></span>
             <div class="center-text">
               <h3 class="margin-bottom-smaller">Current</h3>
-              <span class="points" id="currentPoints--1"></span>
+              <span class="score" id="currentScore--1"></span>
             </div>
           </section>
 
@@ -37,10 +37,10 @@
 
           <section class="player flex column">
             <h2>Player 2</h2>
-            <span class="total-points margin-bottom-bigger" id="totalPoints--2"></span>
+            <span class="total-score margin-bottom-bigger" id="totalScore--2"></span>
             <div class="center-text">
               <h3 class="margin-bottom-smaller">Current</h3>
-              <span class="points" id="currentPoints--2"></span>
+              <span class="score" id="currentScore--2"></span>
             </div>
           </section>
 
