--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="absolute">
         <div class="panel grid grid--2-cols">
 
-          <section class="player player--active flex column">
+          <section class="player player--active flex column" id="sectionPlayer1">
             <h2>Player 1</h2>
             <span class="total-score margin-bottom-bigger" id="totalScore--1"></span>
             <div class="center-text">
@@ -35,7 +35,7 @@
             </div>
           </div>
 
-          <section class="player flex column">
+          <section class="player flex column" id="sectionPlayer2">
             <h2>Player 2</h2>
             <span class="total-score margin-bottom-bigger" id="totalScore--2"></span>
             <div class="center-text">
