Feature: Implement hold

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div>
               <button class="btn" id="rollDice">🎲 Roll Dice</button>
-              <button class="btn">📥 Hold</button>
+              <button class="btn" id="hold">📥 Hold</button>
             </div>
           </div>
 
