Add modal with game rules

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+
+  <div class="modal">
+    <div class="flex margin-bottom-small">
+      <h1>Game Rules:</h1>
+      <button id="btnCloseModal">Close</button>
+    </div>
+    <ul>
+      <li>Press '🎲 ROLL DICE' button to get a number between 1 and 6, and add the number to your current score;</li>
+      <li>Press '📥 HOLD' button to add your current score to your total score, but you loose the turn;</li>
+      <li>If you role the dice and get 1, you loose your turn and your current score is set to 0;</li>
+      <li>First player to reach 100 total score or more wins.</li>
+    </ul>
+  </div>
+
+  <div class="overlay"></div>
+
   <main>
     <div class="container">
       <div class="absolute">
